standardized and resampled all datasets

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -28,6 +28,7 @@
             "outputs": [],
             "source": [
                 "import os\n",
+                "from pathlib import Path\n",
                 "\n",
                 "import rioxarray as riox\n",
                 "import utils.geodata as geodata\n",
@@ -135,36 +136,46 @@
                 "    # bio_ids=config.WC_bio_ids,\n",
                 ")\n",
                 "\n",
-                "resample_dataset(dataset=wc, resolution=0.01, unit=Unit.DEGREE)"
+                "resample_dataset(dataset=wc, resolution=0.01, unit=Unit.DEGREE, resample_alg=4)"
             ]
         },
         {
-            "attachments": {},
             "cell_type": "markdown",
-            "id": "1184b967",
+            "id": "58ba1795",
             "metadata": {},
             "source": [
-                "Convert to GeoDataFrames and merge"
+                "Standardize files to uniform GeoTIFF layout"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "7a4d19b8",
+            "id": "fd4e2326",
             "metadata": {},
             "outputs": [],
             "source": [
-                "bio_fns = config.WC_fns\n",
+                "for fp in wc.fpaths:\n",
+                "    fp = Path(fp)\n",
+                "    parent_dir = fp.parent\n",
+                "    out_dir = parent_dir / \"standardized\"\n",
+                "    out_dir.mkdir(exist_ok=True)\n",
                 "\n",
-                "bios = []\n",
-                "for bio_fn in bio_fns:\n",
-                "    name = os.path.splitext(os.path.basename(bio_fn))[0]\n",
-                "    bio = riox.open_rasterio(bio_fn, masked=True)\n",
-                "    bio.name = name\n",
-                "    bios.append(bio)\n",
-                "    \n",
-                "bio_gdfs = geodata.merge_gdfs([geodata.tif2gdf(bio) for bio in bios])\n",
-                "bio_gdfs.head(5)"
+                "    ds = riox.open_rasterio(fp)\n",
+                "    ds.rio.set_crs(ds.rio.crs, inplace=True)\n",
+                "    ds = ds.astype(\"float32\")\n",
+                "    ds = ds.where(ds != ds.rio.nodata)\n",
+                "    ds.rio.write_nodata(ds.rio.nodata, encoded=True, inplace=True)\n",
+                "\n",
+                "    ds.rio.to_raster(\n",
+                "        out_dir / f\"{fp.stem}.tif\",\n",
+                "        dtype=\"float32\",\n",
+                "        compress=\"zstd\",\n",
+                "        tiled=True,\n",
+                "        blockxsize=256,\n",
+                "        blockysize=256,\n",
+                "        predictor=2,\n",
+                "        num_threads=18,\n",
+                "    )"
             ]
         },
         {
@@ -241,8 +252,8 @@
                 "\n",
                 "    # Aggregate the image collection into monthly averages for each band\n",
                 "    tsr_bands_monthly = []\n",
-                "    for band in bands:\n",
-                "        monthly = gee.aggregate_ic(modis_tsr_masked.select(band), ds, de)\n",
+                "    for ds in bands:\n",
+                "        monthly = gee.aggregate_ic(modis_tsr_masked.select(ds), ds, de)\n",
                 "        tsr_bands_monthly.append(monthly)\n",
                 "\n",
                 "    tsr_monthly_means = []\n",
@@ -353,11 +364,42 @@
                 "soil = Dataset(\n",
                 "    res=1,\n",
                 "    unit=Unit.KILOMETER,\n",
-                "    collection_name=config.soil_name,\n",
+                "    collection_name=CollectionName.SOIL,\n",
                 ")\n",
                 "\n",
                 "# Uncomment to resample the ISRIC dataset to another resolution\n",
                 "resample_dataset(dataset=soil, resolution=0.01, unit=Unit.DEGREE)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "a0b417e4",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for fp in soil.fpaths:\n",
+                "    fp = Path(fp)\n",
+                "    parent_dir = fp.parent\n",
+                "    out_dir = parent_dir / \"standardized\"\n",
+                "    out_dir.mkdir(exist_ok=True)\n",
+                "\n",
+                "    ds = riox.open_rasterio(fp)\n",
+                "    ds.rio.set_crs(ds.rio.crs, inplace=True)\n",
+                "    ds = ds.astype(\"int16\")\n",
+                "    ds = ds.where(ds != ds.rio.nodata)\n",
+                "    ds.rio.write_nodata(ds.rio.nodata, encoded=True, inplace=True)\n",
+                "    print(f\"{fp.stem}.tif\")\n",
+                "    ds.rio.to_raster(\n",
+                "        out_dir / f\"{fp.stem}.tif\",\n",
+                "        dtype=\"int16\",\n",
+                "        compress=\"zstd\",\n",
+                "        tiled=True,\n",
+                "        blockxsize=256,\n",
+                "        blockysize=256,\n",
+                "        predictor=2,\n",
+                "        num_threads=18,\n",
+                "    )"
             ]
         },
         {
@@ -510,23 +552,21 @@
             "id": "461ccdbf",
             "metadata": {},
             "source": [
-                "Upsample all to 30 second resolution"
+                "Split monthly averages into single-band GeoTIFFs"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "c9e548f7",
+            "id": "3ca00f3d",
             "metadata": {},
             "outputs": [],
             "source": [
-                "import xarray as xr\n",
-                "\n",
-                "# test.close()\n",
-                "test = xr.open_mfdataset(\"data/vodca/0.25_deg/*.nc\")\n",
-                "# test = xr.open_dataset(\"data/vodca/0.25_deg/C_2002-2004_multiyear_monthly_0.25_deg.nc\")\n",
-                "# test = xr.open_mfdataset(\"data/modis/0.01_deg/*.nc\")\n",
-                "# test = xr.open_dataset(\"data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.nc\")"
+                "vodca = Dataset(\n",
+                "    res=0.25,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.VODCA,\n",
+                ")"
             ]
         },
         {
@@ -547,9 +587,7 @@
                 "    dataset=vodca,\n",
                 "    resolution=0.01,\n",
                 "    unit=Unit.DEGREE,\n",
-                "    format=\"netCDF\",\n",
-                "    mf=False,\n",
-                "    chunks={\"month\": 1},\n",
+                "    format=\"GTiff\",\n",
                 ")"
             ]
         },
@@ -615,7 +653,23 @@
             "source": [
                 "from pathlib import Path\n",
                 "import xarray as xr\n",
-                "import rioxarray as riox"
+                "import rioxarray as riox\n",
+                "import numpy as np\n",
+                "from utils.datasets import Dataset, Unit, CollectionName"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "2128f3f4",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "modis = Dataset(\n",
+                "    res=1,\n",
+                "    unit=Unit.KILOMETER,\n",
+                "    collection_name=CollectionName.MODIS,\n",
+                ")"
             ]
         },
         {
@@ -625,29 +679,32 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "fn = Path(\"data/modis/1_km/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_1_km.tif\")\n",
-                "ds = riox.open_rasterio(fn, masked=True)\n",
-                "ds"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "99e397a9",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "ds[0].rio.to_raster(\"data/modis/\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "23df7c62",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "fns = Path(\"data/modis/1_km\").glob(\"*.tif\")\n"
+                "crs = \"EPSG:4326\"\n",
+                "\n",
+                "for fp in modis.fpaths:\n",
+                "    parent_dir = Path(fp).parent\n",
+                "    out_dir = Path(parent_dir, \"single-band\")\n",
+                "    out_dir.mkdir(exist_ok=True)\n",
+                "    month = fp.split(\"_\")[-3]\n",
+                "    ds = riox.open_rasterio(fp)\n",
+                "\n",
+                "    for i, ds in enumerate(ds):\n",
+                "        band_num = f\"{i + 1:02d}\"\n",
+                "        ds.rio.set_crs(crs, inplace=True)\n",
+                "        ds = ds.where(ds != ds.rio.nodata)\n",
+                "        ds.rio.write_nodata(ds.rio.nodata, encoded=True, inplace=True)\n",
+                "        ds.attrs[\"long_name\"] = f\"sur_refl_band{band_num}mean_{month}\"\n",
+                "\n",
+                "        ds.rio.to_raster(\n",
+                "            out_dir / f\"2000-2004_sur_refl_multiyear_mean_{month}_band{band_num}.tif\",\n",
+                "            dtype=\"int16\",\n",
+                "            compress=\"zstd\",\n",
+                "            tiled=True,\n",
+                "            blockxsize=256,\n",
+                "            blockysize=256,\n",
+                "            predictor=2,\n",
+                "            num_threads=18,\n",
+                "        )"
             ]
         },
         {
@@ -675,6 +732,74 @@
             ]
         },
         {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "5847e569",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "vodca = Dataset(\n",
+                "    res=0.25,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.VODCA,\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "329e2a34",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "resample_dataset(vodca, 0.01, Unit.DEGREE)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "7bdb64d8",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from pathlib import Path\n",
+                "\n",
+                "\n",
+                "for fp in vodca.fpaths:\n",
+                "    parent_dir = Path(fp).parent\n",
+                "    out_dir = Path(parent_dir, \"single-band\")\n",
+                "    out_dir.mkdir(exist_ok=True)\n",
+                "\n",
+                "    fp = Path(fp)\n",
+                "    ds = fp.stem.split(\"_\")[0].lower()\n",
+                "    \n",
+                "    ds = xr.open_dataset(fp)\n",
+                "    ds = ds.rename({\"lon\": \"x\", \"lat\": \"y\"})\n",
+                "\n",
+                "    for i in range(1, 13):\n",
+                "        month = ds.sel(month=i)[f\"{ds}_band\"]\n",
+                "        month.rio.set_crs(\"EPSG:4326\", inplace=True)\n",
+                "        month = month.where(month != month.rio.nodata)\n",
+                "        month.rio.write_nodata(month.rio.nodata, encoded=True, inplace=True)\n",
+                "        month.attrs[\"long_name\"] = f\"Vegetation optical depth {ds} band\"\n",
+                "        out_name = Path(fp.stem.replace(\"monthly\", f\"mean_m{i:02d}\") + \".tif\")\n",
+                "        out_name = out_dir / out_name.with_suffix(\".tif\")\n",
+                "\n",
+                "        month.rio.to_raster(\n",
+                "            out_name,\n",
+                "            dtype=\"float32\",\n",
+                "            compress=\"zstd\",\n",
+                "            tiled=True,\n",
+                "            blockxsize=256,\n",
+                "            blockysize=256,\n",
+                "            predictor=2,\n",
+                "            num_threads=18,\n",
+                "        )\n",
+                "        \n",
+                "        "
+            ]
+        },
+        {
             "cell_type": "markdown",
             "id": "7bd20370",
             "metadata": {},
@@ -695,136 +820,44 @@
         },
         {
             "cell_type": "markdown",
-            "id": "11ce5b14",
+            "id": "94eb7800",
             "metadata": {},
             "source": [
-                "MODIS"
+                "All"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "2a661c3c",
+            "id": "771898f8",
             "metadata": {},
             "outputs": [],
             "source": [
-                "modis = xr.open_dataset(\"./data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.tif\")\n",
-                "modis = modis[\"band_data\"][0]\n",
-                "modis.rio.resolution()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "ddb6b860",
-            "metadata": {},
-            "source": [
-                "VODCA (0.01 deg)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "99c5b64a",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "vod_samp = xr.open_dataset(\"data/vodca/0.01_deg/C_2002-2004_multiyear_monthly_0.01_deg.nc\")\n",
-                "vod_samp = vod_samp[\"c_band\"][0]\n",
-                "# vod_samp = vod_samp.rio.write_crs(\"epsg:4326\")\n",
-                "# # Define the x/y extent of North America\n",
-                "# xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
-                "# vod_samp = vod_samp.rio.clip_box(xmin, ymin, xmax, ymax)\n",
-                "# vod_samp.plot()"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "5cb835b9",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "vod_samp.rio.resolution()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "e4746d2e",
-            "metadata": {},
-            "source": [
-                "VODCA (1 km)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "0c8a8bf3",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "vod_samp = xr.open_dataset(\"data/vodca/1_km/C_2002-2004_multiyear_monthly_1_km.nc\")\n",
-                "vod_samp = vod_samp[\"Band1\"]\n",
-                "vod_samp = vod_samp.rio.write_crs(\"epsg:4326\")\n",
-                "# Define the x/y extent of North America\n",
-                "xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
-                "vod_samp = vod_samp.rio.clip_box(xmin, ymin, xmax, ymax)\n",
-                "vod_samp.plot()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "2afc5000",
-            "metadata": {},
-            "source": [
-                "VODCA (0.25 deg)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "94b04126",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "vod_samp = xr.open_dataset(\"data/vodca/0.25_deg/C_2002-2004_multiyear_monthly_0.25_deg.nc\")\n",
-                "vod_samp = vod_samp[\"c_band\"][0]\n",
-                "vod_samp = vod_samp.rio.write_crs(\"epsg:4326\")\n",
-                "xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
-                "vod_samp = vod_samp.rio.clip_box(xmin, ymin, xmax, ymax)\n",
-                "vod_samp.plot()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "03da75fd",
-            "metadata": {},
-            "source": [
-                "VODCA (orig)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "1e53ef37",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "from pathlib import Path\n",
-                "import cartopy.crs as ccrs\n",
-                "import matplotlib.pyplot as plt\n",
-                "fns = Path(\"data/vodca/source/Ku-band/\").glob(\"**/*.nc\")\n",
-                "# plot north america for first 10 files\n",
-                "fig, ax = plt.subplots(5, 2, subplot_kw={\"projection\": ccrs.PlateCarree()})\n",
-                "ax = ax.flatten()\n",
-                "for i, fn in enumerate(fns):\n",
-                "    if i >= 10:\n",
-                "        break\n",
-                "    vod_src = xr.open_dataset(fn)\n",
-                "    vod_src = vod_src[\"vod\"][0]\n",
-                "    vod_src = vod_src.rio.write_crs(\"epsg:4326\")\n",
-                "    xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
-                "    vod_src = vod_src.rio.clip_box(xmin, ymin, xmax, ymax)\n",
-                "    vod_src.plot(ax=ax[i])"
+                "modis = Dataset(\n",
+                "    res=0.01,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.MODIS,\n",
+                ")\n",
+                "\n",
+                "vodca = Dataset(\n",
+                "    res=0.01,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.VODCA,\n",
+                ")\n",
+                "\n",
+                "soil = Dataset(\n",
+                "    res=0.01,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.SOIL,\n",
+                ")\n",
+                "\n",
+                "wc = Dataset(\n",
+                "    res=0.01,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.WORLDCLIM,\n",
+                ")\n",
+                "\n",
+                "coll = [modis, vodca, soil, wc]"
             ]
         }
     ],
