--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -804,60 +804,15 @@
             "id": "7bd20370",
             "metadata": {},
             "source": [
-                "# Sanity check for 0.01 degree downsampling"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "86c54d85",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import xarray as xr\n",
-                "import rioxarray as riox"
+                "# Split all dataarrays into multilayer tiles"
             ]
         },
         {
             "cell_type": "markdown",
-            "id": "94eb7800",
+            "id": "b1ae4086",
             "metadata": {},
             "source": [
-                "All"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "771898f8",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "modis = Dataset(\n",
-                "    res=0.01,\n",
-                "    unit=Unit.DEGREE,\n",
-                "    collection_name=CollectionName.MODIS,\n",
-                ")\n",
-                "\n",
-                "vodca = Dataset(\n",
-                "    res=0.01,\n",
-                "    unit=Unit.DEGREE,\n",
-                "    collection_name=CollectionName.VODCA,\n",
-                ")\n",
-                "\n",
-                "soil = Dataset(\n",
-                "    res=0.01,\n",
-                "    unit=Unit.DEGREE,\n",
-                "    collection_name=CollectionName.SOIL,\n",
-                ")\n",
-                "\n",
-                "wc = Dataset(\n",
-                "    res=0.01,\n",
-                "    unit=Unit.DEGREE,\n",
-                "    collection_name=CollectionName.WORLDCLIM,\n",
-                ")\n",
-                "\n",
-                "coll = [modis, vodca, soil, wc]"
+                "See `save_tiled_collections.py`"
             ]
         }
     ],
