--- a/3-ModelAssessment.ipynb
+++ b/3-ModelAssessment.ipynb
@@ -23,17 +23,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utils.models import TrainedSet\n",
+    "import dask_geopandas as dgpd\n",
+    "from utils.models import TrainedSet, Prediction\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Area of Applicability (AOA)"
    ]
   },
   {
@@ -47,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the training run data from the results dataframe"
+    "Get the training run data from the results dataframe and choose a model"
    ]
   },
   {
@@ -59,22 +53,7 @@
     "# Load a model\n",
     "results_df = pd.read_csv(\"./results/training_results.csv\").copy()\n",
     "training_id = \"2023-07-21_17-01-49\"\n",
-    "results = results_df.loc[(results_df[\"Run ID\"] == training_id)].sort_values(by=\"Test r-squared\", ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the best performing model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "results = results_df.loc[(results_df[\"Run ID\"] == training_id)].sort_values(by=\"Test r-squared\", ascending=False)\n",
     "row = results.iloc[0]\n",
     "trained = TrainedSet.from_results_row(row)"
    ]
@@ -83,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load unseen predictor data"
+    "Load unseen predictor data and run prediction"
    ]
   },
   {
@@ -92,24 +71,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import geopandas as gpd\n",
-    "from utils.models import Prediction\n",
+    "# Load new high-res data\n",
+    "new_df = dgpd.read_parquet(\n",
+    "    \"data/collections/tiled_5x5_deg_MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.01_deg/tile_95_35_100_40.parq\"\n",
+    ")\n",
     "\n",
-    "new_df_fn = os.path.join(\"data/collections\", row[\"collection\"])\n",
-    "new_df = gpd.read_feather(new_df_fn)\n",
-    "\n",
-    "new_df_imputed_fn = \"data/collections/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=all_imputed.feather\"\n",
-    "new_df_imputed = gpd.read_feather(new_df_imputed_fn)\n",
-    "\n",
-    "pred = Prediction(trained, new_df, new_df_imputed)"
+    "pred = Prediction(trained, new_df.compute())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create new dataframe with predictions, masked according to the Area of Applicability (may take a while for AoA calculation)"
+    "Plot the masked (by AoA) trait predictions"
    ]
   },
   {
@@ -118,57 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {\"trait\": pred.predictions}\n",
-    "predictions_df = gpd.GeoDataFrame(d, geometry=new_df.geometry, crs=new_df.crs, index=new_df.index)\n",
-    "predictions_df[\"masked_aoa\"] = predictions_df[\"trait\"].where(pred.aoa.df[\"AOA\"] == 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CV Coefficient of Variation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ToDo:\n",
-    "1. Confirm that CV estimators are being saved\n",
-    "2. Run predictions with full dataset for each model\n",
-    "3. Calculate the CoV across the predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load a model\n",
-    "results_df = pd.read_csv(\"./results/test/test-training_results.csv\").copy()\n",
-    "row = results_df.sort_values(by=\"Run ID\").iloc[-1]\n",
-    "trained = TrainedSet.from_results_row(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "from utils.models import Prediction\n",
-    "\n",
-    "new_df_fn = row[\"collection\"]\n",
-    "new_df = gpd.read_feather(new_df_fn)\n",
-    "\n",
-    "new_df_imputed_fn = \"data/collections/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=all_imputed.feather\"\n",
-    "new_df_imputed = gpd.read_feather(new_df_imputed_fn)\n",
-    "\n",
-    "pred = Prediction(trained, new_df, new_df_imputed)\n",
-    "pred.df"
+    "pred.df.plot(column=pred.df.columns[-2], markersize=0.5)"
    ]
   }
  ],
