explort trait distributions (orig and ln); fix nan issue in split vodca data

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -31,11 +31,13 @@
                 "from pathlib import Path\n",
                 "\n",
                 "import rioxarray as riox\n",
-                "import utils.geodata as geodata\n",
+                "import numpy as np\n",
+                "import geopandas as gpd\n",
+                "import pandas as pd\n",
                 "from PreprocessingConfig import PreprocessingConfig\n",
-                "from utils.datasets import Dataset, Unit, resample_dataset, CollectionName\n",
+                "from utils.datasets import Dataset, Unit, resample_dataset, CollectionName, GBIFBand\n",
                 "\n",
-                "from utils.visualize import plot_traits\n",
+                "from utils.visualize import plot_distributions\n",
                 "\n",
                 "%load_ext autoreload\n",
                 "%autoreload 2\n",
@@ -50,7 +52,7 @@
             "id": "715fefce",
             "metadata": {},
             "source": [
-                "## Try/iNaturalist trait maps"
+                "## TRY + GBIF/iNaturalist trait maps"
             ]
         },
         {
@@ -59,7 +61,7 @@
             "id": "2bc43c4b-2ea7-4a0f-b226-3b08bae3dad7",
             "metadata": {},
             "source": [
-                "### Visualize TRY/iNaturalist trait maps\n",
+                "### Visualize TRY + GBIF/iNaturalist trait maps\n",
                 "\n",
                 "First, let's look at the trait maps generated from TRY/iNaturalist observations by [Wolf, et al. (2022)](https://doi.org/10.1038/s41559-022-01904-x)."
             ]
@@ -71,37 +73,109 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "if config.plot_traits:\n",
-                "    inat_fns_2deg = config.iNat_fns(\"2\")\n",
+                "gbif = Dataset(\n",
+                "    res=0.5,\n",
+                "    collection_name=CollectionName.GBIF,\n",
+                "    band=GBIFBand.MEAN\n",
+                ")\n",
                 "\n",
-                "    plot_traits(inat_fns_2deg, 4)"
+                "splot = Dataset(\n",
+                "    res=0.5,\n",
+                "    collection_name=CollectionName.SPLOT,\n",
+                "    band=GBIFBand.MEAN\n",
+                ")"
             ]
         },
         {
-            "attachments": {},
             "cell_type": "markdown",
-            "id": "b4d783cd",
+            "id": "e4b4d36e",
             "metadata": {},
             "source": [
-                "### Convert to GeoDataFrames and merge"
+                "### GBIF trait distributions"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "24459b3e",
+            "id": "91add9cf",
             "metadata": {},
             "outputs": [],
             "source": [
-                "trait_fns = config.iNat_fns\n",
+                "df = gbif.df.drop(columns=[\"geometry\"])\n",
                 "\n",
-                "trait_gdfs = []\n",
-                "for trait_fn in trait_fns:\n",
-                "    gdf = geodata.tif2gdf(trait_fn)\n",
-                "    trait_gdfs.append(gdf)\n",
+                "plot_distributions(df)\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "6c0a9731",
+            "metadata": {},
+            "source": [
+                "### sPlotOpen trait distributions"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "7c587986",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df = splot.df.drop(columns=[\"geometry\"])\n",
                 "\n",
-                "trait_gdfs = geodata.merge_gdfs(trait_gdfs)\n",
-                "trait_gdfs.head(5)"
+                "plot_distributions(df)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "d1cc6d5d",
+            "metadata": {},
+            "source": [
+                "### Log-transform GBIF and sPlotOpen data"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "482b5824",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Log-transform the GBIF data\n",
+                "gbif_ln = pd.DataFrame(np.log(gbif.df[gbif.cols]), columns=gbif.cols)\n",
+                "gbif_ln.columns = [f\"{col}_ln\" for col in gbif_ln.columns]\n",
+                "gbif_ln = gpd.GeoDataFrame(gbif_ln, geometry=gbif.df.geometry, crs=gbif.df.crs)\n",
+                "\n",
+                "splot_ln = pd.DataFrame(np.log(splot.df[splot.cols]), columns=splot.cols)\n",
+                "splot_ln.columns = [f\"{col}_ln\" for col in splot_ln.columns]\n",
+                "splot_ln = gpd.GeoDataFrame(splot_ln, geometry=splot.df.geometry, crs=splot.df.crs)\n",
+                "\n",
+                "plot_distributions(gbif_ln.drop(columns=[\"geometry\"]))\n",
+                "plot_distributions(splot_ln.drop(columns=[\"geometry\"]))"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "c4e8abb0",
+            "metadata": {},
+            "source": [
+                "Save the data to disk"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "f15b2df1",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "gbif_out_path = Path(\"data/gbif_ln/0.5_deg/gbif_ln_mean_0.5_deg.parq\")\n",
+                "gbif_out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+                "gbif_ln.to_parquet(gbif_out_path, compression=\"zstd\", compression_level=2)\n",
+                "\n",
+                "splot_out_path = Path(\"data/splot_ln/0.5_deg/splot_ln_mean_0.5_deg.parq\")\n",
+                "splot_out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+                "splot_ln.to_parquet(splot_out_path, compression=\"zstd\", compression_level=2)"
             ]
         },
         {
@@ -130,13 +204,13 @@
             "outputs": [],
             "source": [
                 "wc = Dataset(\n",
-                "    res=30,\n",
-                "    unit=Unit.SECOND,\n",
+                "    res=0.5,\n",
+                "    unit=Unit.DEGREE,\n",
                 "    collection_name=config.WC_name,\n",
-                "    # bio_ids=config.WC_bio_ids,\n",
+                "    bio_ids=None,\n",
                 ")\n",
                 "\n",
-                "resample_dataset(dataset=wc, resolution=0.01, unit=Unit.DEGREE, resample_alg=4)"
+                "# resample_dataset(dataset=wc, resolution=0.01, unit=Unit.DEGREE, resample_alg=4)"
             ]
         },
         {
@@ -308,13 +382,44 @@
             "outputs": [],
             "source": [
                 "modis = Dataset(\n",
-                "    res=1,\n",
-                "    unit=Unit.KILOMETER,\n",
+                "    res=0.5,\n",
+                "    unit=Unit.DEGREE,\n",
                 "    collection_name=CollectionName.MODIS,\n",
                 ")\n",
                 "\n",
                 "# Uncomment to resample the MODIS dataset to another resolution\n",
-                "resample_dataset(dataset=modis, resolution=0.01, unit=Unit.DEGREE)"
+                "# resample_dataset(dataset=modis, resolution=0.01, unit=Unit.DEGREE)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "4d80deb1",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for fp in modis.fpaths:\n",
+                "    fp = Path(fp)\n",
+                "    parent_dir = fp.parent\n",
+                "    out_dir = parent_dir / \"standardized\"\n",
+                "    out_dir.mkdir(exist_ok=True)\n",
+                "\n",
+                "    ds = riox.open_rasterio(fp)\n",
+                "    ds.rio.set_crs(ds.rio.crs, inplace=True)\n",
+                "    ds = ds.astype(\"float32\")\n",
+                "    ds = ds.where(ds != ds.rio.nodata)\n",
+                "    ds.rio.write_nodata(ds.rio.nodata, encoded=True, inplace=True)\n",
+                "\n",
+                "    ds.rio.to_raster(\n",
+                "        out_dir / f\"{fp.stem}.tif\",\n",
+                "        dtype=\"float32\",\n",
+                "        compress=\"zstd\",\n",
+                "        tiled=True,\n",
+                "        blockxsize=256,\n",
+                "        blockysize=256,\n",
+                "        predictor=2,\n",
+                "        num_threads=18,\n",
+                "    )"
             ]
         },
         {
@@ -362,13 +467,13 @@
             "outputs": [],
             "source": [
                 "soil = Dataset(\n",
-                "    res=1,\n",
-                "    unit=Unit.KILOMETER,\n",
+                "    res=0.5,\n",
+                "    unit=Unit.DEGREE,\n",
                 "    collection_name=CollectionName.SOIL,\n",
                 ")\n",
                 "\n",
                 "# Uncomment to resample the ISRIC dataset to another resolution\n",
-                "resample_dataset(dataset=soil, resolution=0.01, unit=Unit.DEGREE)"
+                "# resample_dataset(dataset=soil, resolution=0.01, unit=Unit.DEGREE)"
             ]
         },
         {
@@ -389,7 +494,6 @@
                 "    ds = ds.astype(\"int16\")\n",
                 "    ds = ds.where(ds != ds.rio.nodata)\n",
                 "    ds.rio.write_nodata(ds.rio.nodata, encoded=True, inplace=True)\n",
-                "    print(f\"{fp.stem}.tif\")\n",
                 "    ds.rio.to_raster(\n",
                 "        out_dir / f\"{fp.stem}.tif\",\n",
                 "        dtype=\"int16\",\n",
@@ -592,21 +696,6 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "b6741294",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import xarray as xr\n",
-                "import rioxarray as riox\n",
-                "\n",
-                "# test = xr.open_dataset(\"data/vodca/0.25_deg/C_2002-2004_multiyear_monthly_0.25_deg.nc\")\n",
-                "# test = xr.open_dataset(\"data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.nc\")\n",
-                "test = riox.open_rasterio(\"data/modis/1_km/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_1_km.tif\", masked=True)"
-            ]
-        },
-        {
             "cell_type": "markdown",
             "id": "0cdb67e7",
             "metadata": {},
@@ -654,7 +743,6 @@
                 "from pathlib import Path\n",
                 "import xarray as xr\n",
                 "import rioxarray as riox\n",
-                "import numpy as np\n",
                 "from utils.datasets import Dataset, Unit, CollectionName"
             ]
         },
@@ -666,8 +754,8 @@
             "outputs": [],
             "source": [
                 "modis = Dataset(\n",
-                "    res=1,\n",
-                "    unit=Unit.KILOMETER,\n",
+                "    res=0.5,\n",
+                "    unit=Unit.DEGREE,\n",
                 "    collection_name=CollectionName.MODIS,\n",
                 ")"
             ]
@@ -739,20 +827,10 @@
             "outputs": [],
             "source": [
                 "vodca = Dataset(\n",
-                "    res=0.25,\n",
+                "    res=0.5,\n",
                 "    unit=Unit.DEGREE,\n",
                 "    collection_name=CollectionName.VODCA,\n",
                 ")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "329e2a34",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "resample_dataset(vodca, 0.01, Unit.DEGREE)"
             ]
         },
         {
@@ -771,18 +849,21 @@
                 "    out_dir.mkdir(exist_ok=True)\n",
                 "\n",
                 "    fp = Path(fp)\n",
-                "    ds = fp.stem.split(\"_\")[0].lower()\n",
-                "    \n",
+                "    band = fp.stem.split(\"_\")[0].lower()\n",
+                "\n",
                 "    ds = xr.open_dataset(fp)\n",
                 "    ds = ds.rename({\"lon\": \"x\", \"lat\": \"y\"})\n",
                 "\n",
                 "    for i in range(1, 13):\n",
-                "        month = ds.sel(month=i)[f\"{ds}_band\"]\n",
+                "        month = ds.sel(month=i)[f\"{band}_band\"]\n",
                 "        month.rio.set_crs(\"EPSG:4326\", inplace=True)\n",
                 "        month = month.where(month != month.rio.nodata)\n",
                 "        month.rio.write_nodata(month.rio.nodata, encoded=True, inplace=True)\n",
-                "        month.attrs[\"long_name\"] = f\"Vegetation optical depth {ds} band\"\n",
-                "        out_name = Path(fp.stem.replace(\"monthly\", f\"mean_m{i:02d}\") + \".tif\")\n",
+                "        month.attrs[\"long_name\"] = f\"Vegetation optical depth {band} band\"\n",
+                "        out_name = Path(\n",
+                "            fp.name.replace(\"monthly\", f\"mean_m{i:02d}\").replace(\"_0.5_deg\", \"\")\n",
+                "        )\n",
+                "\n",
                 "        out_name = out_dir / out_name.with_suffix(\".tif\")\n",
                 "\n",
                 "        month.rio.to_raster(\n",
@@ -794,9 +875,45 @@
                 "            blockysize=256,\n",
                 "            predictor=2,\n",
                 "            num_threads=18,\n",
-                "        )\n",
-                "        \n",
-                "        "
+                "        )"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "3e51d080",
+            "metadata": {},
+            "source": [
+                "Fix incorrect encoding of nodata value in VODCA data"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "99c09016",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for fp in vodca.fpaths:\n",
+                "    parent_dir = Path(fp).parent\n",
+                "    out_dir = Path(parent_dir, \"fixed\")\n",
+                "    out_dir.mkdir(exist_ok=True)\n",
+                "\n",
+                "    fp = Path(fp)\n",
+                "    ds = riox.open_rasterio(fp).squeeze()\n",
+                "    ds.rio.write_crs(\"EPSG:4326\", inplace=True)\n",
+                "    ds.rio.write_nodata(np.nan, encoded=True, inplace=True)\n",
+                "    out_name = out_dir / fp.name\n",
+                "\n",
+                "    ds.rio.to_raster(\n",
+                "        out_name,\n",
+                "        dtype=\"float32\",\n",
+                "        compress=\"zstd\",\n",
+                "        tiled=True,\n",
+                "        blockxsize=256,\n",
+                "        blockysize=256,\n",
+                "        predictor=2,\n",
+                "        num_threads=18,\n",
+                "    )"
             ]
         },
         {
